# coins

./: .gitignore  CMakeLists.txt  CMakePresets.json  MoneyDetection.cpp  MoneyDetection.h  README.md  vcpkg.json
core/: CMakeLists.txt  Detector.cpp  Detector.hpp
data/: img1_detected.txt  img1_labels.txt
data/Nikita/part1/: coins0.csv  coins0_labels.txt  coins1.csv  coins2.csv  coins3.csv  coins4.csv  coins5.csv  coins6.csv  coins7.csv  coins8.csv  coins9.csv
data/Nikita/part2/: coins1.csv  coins2.csv  coins3.csv  coins4.csv  coins5.csv
data/rczulch/: coins1.txt  coins2.txt  coins3.txt  coins4.txt  coins5.txt
data/rczulch/__MACOSX/: ._mini-coin-test-set
include/: coin_detector.hpp  evaluator.hpp
scripts/: detect.sh
src/: coin_detector.cpp  evaluator.cpp  main.cpp
tools/: CMakeLists.txt
tools/detect_cli/: CMakeLists.txt  main.cpp
tools/label_editor_wx/: CMakeLists.txt  Canvas.cpp  Canvas.hpp  LabelIO.cpp  LabelIO.hpp  MainFrame.cpp  MainFrame.hpp  main.cpp
